# foodsteps-interview

backend/: README.md  pyproject.toml  solution.py  test_backend.py
frontend/: README.md  package-lock.json  package.json
frontend/src/: App.test.tsx  App.tsx  types.ts
